Remove useless variables, fix select size, fix stars vertical spacing.

--- a/styles/standard-assets/card.css
+++ b/styles/standard-assets/card.css
@@ -65,7 +65,7 @@
 }
 
 .standart-card-stars-text {
-  margin-bottom: -10px;
+  margin-bottom: -8px;
   margin-top: 10px;
   transform: translateX(-1px);
   font-size: 17px;
